styles.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

:root {
    --bgcol0: 0, 0%, 0%;
    --bgcol1: 232, 100%, 4%;
    --bgcol2: 232, 20%, 12%;
    --bgcol3: 232, 17%, 20%;
    --bgcol4: 232, 14%, 26%;
    --bgcol5: 232, 12%, 32%;
    --fgcol0: 0, 0%, 100%;
    --fgcol1: 232, 32%, 86%;
    --fgcol2: 232, 16%, 76%;
    --fgcol3: 232, 11%, 67%;
    --fgcol4: 232, 7%, 57%;
    --fgcol5: 232, 5%, 48%;
    --emcol1: 185, 67%, 48%;
    --emcol2: 185, 67%, 41%;
    --emcol3: 185, 66%, 36%;
    --emcol4: 185, 67%, 30%;
    --emcol5: 185, 69%, 24%;
    --hicol1: 37, 100%, 80%;
    --hicol2: 37, 100%, 70%;
    --hicol3: 37, 100%, 55%;
    --hicol4: 37, 100%, 45%;
    --hicol5: 37, 100%, 40%;
    --chcol1: 232, 67%, 48%;
    --chcol2: 208, 67%, 48%;
    --chcol3: 356, 100%, 55%;
}

* {
    box-sizing: border-box;
    touch-action: manipulation;
}

::-webkit-scrollbar {
    width: 16px;
  }
  
  ::-webkit-scrollbar-track {
    background: hsl(var(--bgcol2));
  }
  
  ::-webkit-scrollbar-thumb {
    background: hsl(var(--bgcol3));
    border-radius: 16px;
  }
  
  ::-webkit-scrollbar-thumb:hover {
    background: hsl(var(--bgcol4));
  }

/* General */
body {
    font-family: 'Poppins', sans-serif;
    font-size: 1em;
    padding: 0;
    margin: 0;
    font-weight: 300;
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    background-color: hsl(var(--bgcol1));
    color: hsl(var(--fgcol1));
    justify-content: space-between;
    overflow-x: hidden;
}

a {
    color: inherit;
    text-decoration: none;
}

a:hover {
    color: hsl(var(--hicol3));
    cursor: pointer;
}

li {
    list-style: none;
}

h1 {
    font-size: 2em;
    letter-spacing: 0.5em;
    font-weight: 300;
}

h2 {
    font-size: 1.5em;
    font-weight: 300;
    letter-spacing: 0.5em;
}

.nav-text {
    white-space: nowrap;
    display: inline;
}

.flex {
    display: flex;
    gap: 2em;
}

.logo {
    width: 2em;
    height: 2em;
    fill: hsl(var(--fgcol1));
    transition: transform 250ms ease-out;
}

.logo:hover {
    transform: scale(1.1);
}

.nav-toggle {
    display: none;
    }


.primary-header {
    align-items: center;
    justify-content: space-between;
    margin: 2em;
    margin-right: 4em;
    z-index: 1000;
}


.logo-container {
    align-items: baseline;
    justify-content: left;
    font-size: 1.2em;
    gap: 1em;
    letter-spacing: 0.5em;
}

.primary-navigation {
    padding: none;
    margin: none;
}

.primary-navigation a > span {
    font-weight: 900;
    margin-inline-end: 0.5em;
}

.dropdown {
    background: hsl(var(--bgcol1), 97%);
    display: flex;
    flex-direction: column;
    gap: 2em;
    padding: 2em;
    margin: 0;
    align-items:stretch;
    border-radius: 0.2em;
    transition: all 250ms ease-in-out;
    position: fixed;
    opacity: 0;
    visibility: hidden;
}

@supports (backdrop-filter: blur(0.5em)) {
    .dropdown {
        background: hsl(var(--bgcol1), 80%);
        backdrop-filter: blur(0.5em);
    }
}

ul li:hover > ul,
ul li:focus-within > ul,
ul li ul:hover,
ul li ul:focus {
   visibility: visible;
   opacity: 1;
}

@media (min-width: 55em) and (max-width: 65em) {
    .primary-navigation a > span {
        display: none;
    }
}

.login-toggle, .theme-toggle {
    border: 0;
    background: none;
    color: inherit;
    padding: 0;
    margin: 0;
}

.bi-box-arrow-in-right[data-visible="false"],
.bi-box-arrow-left[data-visible="false"],
.bi-sun-fill[data-visible="false"],
.bi-moon-fill[data-visible="false"] {
    display: none;
}

@media (max-width: 55em) {
    .primary-navigation {
        position: fixed;
        z-index: 1000;
        flex-direction: column;
        inset: 0 0 0 50%;
        padding: min(20vh, 10em) 2em;
        margin: 0;
        background: hsl(var(--bgcol2), 97%);
        transform: translateX(100%);
    }

    @supports (backdrop-filter: blur(0.5em)) {
        .primary-navigation {
            background: hsl(var(--bgcol2), 80%);
            backdrop-filter: blur(0.5em);
        }
    }
    
    .primary-navigation[data-visible="true"] {
        transform: translateX(0%);
        transition: transform 250ms ease-out;
    }

    .logo-container > p {
        display: none;
    }

    .nav-toggle {
        position: absolute;
        display: block;
        border: 0;
        top: 2em;
        right: 2em;
        z-index: 9999;
        background: none;
        color: hsl(var(--fgcol1));
        transition: transform 250ms ease-out;
    }
    
    .nav-toggle:hover  {
        color: hsl(var(--fgcol0));
        transform: scale(1.2);
    }

    .bi-x, .bi-list {
        font-size: 2em;
    }
    
    .bi-x[data-visible="false"],
    .bi-list[data-visible="false"] {
        display: none;
    }

    .dropdown {
        background: none;
        backdrop-filter: none;
        opacity: 1;
        visibility: visible;
        border-top: 0.1em solid hsl(var(--fgcol3));
        transition: none;
    }
}

@media (max-height: 28em) and (max-width: 55em){
    .primary-navigation, .dropdown {
        gap: 0;
        padding: 0 1em 0 1em;
        justify-content:center;
    }
}

@media (max-height: 14em) and (max-width: 55em){
    .primary-navigation, .dropdown {
        gap: 0;
        padding: 0 1em 0 1em;
        justify-content: flex-start;
    }

    .primary-navigation a > span {
        display: none;
    }

}

.container p {
    font-weight: 200;
    margin: 1em 1em;
}

.container h1 {
    margin: 1em 0;
}

.box-shadow {
    margin: 0.5em;
    box-shadow: 0 0.3em 0.5em rgba(0, 0, 0, 0.15);
    border-radius: 0.5em;
}

.container .row {
    background-color: hsl(var(--bgcol2), 25%);
    padding: 4em 1em;
    margin: 0;
    border-radius: 0.5em;
}

.btn-primary {
    background-color: hsl(var(--emcol2));
    border: 0;
}

.btn-primary:focus {
    box-shadow: none;
    background-color: hsl(var(--emcol2));
}

.btn-primary:hover {
    background-color: hsl(var(--emcol3));
    border: 0;
    box-shadow: none;
}


.form-switch {
    margin-left: 1em;
}
.form-check-input {
    background-color: hsl(var(--fgcol1));
    transform: scale(2);
    border: none;
}

.form-check-input:checked {
    background-color: hsl(var(--emcol2));
}

.form-check-input:focus {
    box-shadow: none;
  }
  
.col-sm-3 {
    height: 6em;
    
}

.footer {
    margin: 2em;
    margin-right: 4em;
    z-index: 1000;
    color: hsl(var(--fgcol2));
    display: flex;
    gap: 1em;
    font-size: 0.8em;
    font-weight: 200;
    align-items: baseline;
    justify-content: center;
}

.footer .logo   {
    fill: hsl(var(--fgcol2));
    height: 2em;
    width: 2em;
}
.sources {
    padding-left: 1em;
    border-left: 1px solid hsl(var(--bgcol5));
}

.copyright  {
    margin-top: 0.5em;
}


@media (min-width: 90em) {
    .primary-header {
        width: 85em;
        align-self: center;
    }
}

html[data-theme='light'] {
    filter: invert(1) hue-rotate(180deg);
}

html[data-theme='light'] .dont-invert {
    filter: invert(1) hue-rotate(180deg);
  }

